--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -87,32 +87,6 @@ jobs:
         name: emqx-${{ matrix.os }}
         path: _packages
 
-  # raspbian:
-  #   runs-on: ubuntu-latest
-
-  #   strategy:
-  #     matrix:
-  #       os: 
-  #         - raspbian10
-  #         - raspbian9
-  #         - raspbian8
-    
-  #   steps:
-  #   - uses: actions/checkout@v1
-  #   - name: build emqx packages
-  #     env:
-  #       ERL_OTP: erl22.1
-  #     run: |
-  #       if [ ${{ matrix.os }} == 'raspbian8' ]; then sudo docker pull emqx/build-env@sha256:ed02c6eb379d963c9b696f5703d6e0fc3ad0c5ab1f872e5702246bad9167f824; sudo docker tag emqx/build-env@sha256:ed02c6eb379d963c9b696f5703d6e0fc3ad0c5ab1f872e5702246bad9167f824 emqx/build-env:raspbian8; fi
-  #       if [ ${{ matrix.os }} == 'raspbian9' ]; then sudo docker pull emqx/build-env@sha256:f8200d7b98f6af457300e7edc74537b529cc81b77c37d1c37434fe5822b23263; sudo docker tag emqx/build-env@sha256:f8200d7b98f6af457300e7edc74537b529cc81b77c37d1c37434fe5822b23263 emqx/build-env:raspbian9; fi
-  #       if [ ${{ matrix.os }} == 'raspbian10' ];then sudo docker pull emqx/build-env@sha256:af59d0ae396d22536d84cab763b828318ef721f6f1cd693ecf0a9df8046e9f19; sudo docker tag emqx/build-env@sha256:af59d0ae396d22536d84cab763b828318ef721f6f1cd693ecf0a9df8046e9f19 emqx/build-env:raspbian10; fi
-  #       sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-  #       sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; EMQX_NAME=emqx-edge ./build.sh"
-  #   - uses: actions/upload-artifact@v1
-  #     with:
-  #       name: emqx-${{ matrix.os }}
-  #       path: _packages
-
   docker:
     runs-on: ubuntu-latest
 
@@ -138,17 +112,22 @@ jobs:
       env:
         ARCH: ${{ matrix.arch[0] }}
         QEMU_ARCH: ${{ matrix.arch[1] }}
+        EMQX_DEPS_DEFAULT_VSN: $(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
       run: |
         sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
-        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
-        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
-        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
-    - name: docker cluster test
-      if: $matrix.arch[0]==amd64
-      run: |
-        sudo TARGET=emqx/emqx EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
-        sudo TARGET=emqx/emqx-edge EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
+        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
+        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
+        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
+        sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
+        if [ $ARCH==amd64 ]; then \
+          sudo TARGET=emqx/emqx EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test; \
+          sudo TARGET=emqx/emqx-edge EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test; \
+        fi
+    #- name: docker cluster test
+    #  if: matrix.arch[0]==amd64
+    #  run: |
+    #    sudo TARGET=emqx/emqx EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
+    #    sudo TARGET=emqx/emqx-edge EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-docker-${{ matrix.arch[0] }}
