--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,37 +55,37 @@ jobs:
   #       name: emqx-macosx
   #       path: _build/emqx/rel/emqx
 
-  linux:
-    runs-on: ubuntu-latest
+  # linux:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        os: 
-          - ubuntu18.04 
-          - ubuntu16.04 
-          - ubuntu14.04 
-          - debian10
-          - debian9 
-          - debian8 
-          - opensuse
-          - centos7 
-          - centos6
-          - raspbian10
-          - raspbian9
-          - raspbian8
+  #   strategy:
+  #     matrix:
+  #       os: 
+  #         - ubuntu18.04 
+  #         - ubuntu16.04 
+  #         - ubuntu14.04 
+  #         - debian10
+  #         - debian9 
+  #         - debian8 
+  #         - opensuse
+  #         - centos7 
+  #         - centos6
+  #         - raspbian10
+  #         - raspbian9
+  #         - raspbian8
   
-    steps:
-    - uses: actions/checkout@v1
-    - name: build emqx packages
-      env:
-        ERL_OTP: erl22.1
-      run: |
-        sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=v4.0-rc.3 -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ ! -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
-    - uses: actions/upload-artifact@v1
-      with:
-        name: emqx-${{ matrix.os }}
-        path: _packages
+  #   steps:
+  #   - uses: actions/checkout@v1
+  #   - name: build emqx packages
+  #     env:
+  #       ERL_OTP: erl22.1
+  #     run: |
+  #       sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  #       sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ ! -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
+  #   - uses: actions/upload-artifact@v1
+  #     with:
+  #       name: emqx-${{ matrix.os }}
+  #       path: _packages
 
   docker:
     runs-on: ubuntu-latest
@@ -112,8 +112,8 @@ jobs:
       env:
         ARCH: ${{ matrix.arch[0] }}
         QEMU_ARCH: ${{ matrix.arch[1] }}
-        EMQX_DEPS_DEFAULT_VSN: $(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
       run: |
+        EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
         sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
         sudo EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
