--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,6 +103,10 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         path: emqx-rel
+    - name: Fetch all history for all tags and branches
+      run: |
+        cd emqx-rel
+        git fetch --prune --unshallow
     - uses: actions/checkout@v2
       with:
         repository: emqx/emqx-integration-test
