--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -102,11 +102,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with: 
+        fetch-depth: 0
         path: emqx-rel
-    - name: Fetch all history for all tags and branches
-      run: |
-        cd emqx-rel
-        git fetch --prune --unshallow
     - uses: actions/checkout@v2
       with:
         repository: emqx/emqx-integration-test
