--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,10 +34,12 @@ jobs:
         Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip
         sudo ./_build/emqx/rel/emqx/bin/emqx start
         sudo ./_build/emqx/rel/emqx/bin/emqx stop
+        rm -rf ./_build/emqx/rel/emqx
         aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }} 
         aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }} 
         aws configure set default.region us-west-2
-        aws s3 cp _build/emqx/rel/emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip ./_build/emqx/rel s3://packages.emqx.io/emqx/$version
+        aws s3 mkdir -p s3://packages.emqx.io/emqx-ce/$version
+        aws s3 cp --recursive ./_build/emqx/rel  s3://packages.emqx.io/emqx-ce/$version
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-windows
@@ -73,7 +75,7 @@ jobs:
     - name: upload to aws s3
       run: |
         version=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
-        aws2 s3 cp --recursive ./_build/emqx/rel s3://packages.emqx.io/emqx/$version
+        aws2 s3 cp --recursive ./_build/emqx/rel  s3://packages.emqx.io/emqx-ce/$version
 
   linux:
     runs-on: ubuntu-latest
@@ -113,7 +115,7 @@ jobs:
     - name: upload to aws s3
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-        aws2 s3 cp --recursive ./_packages/emqx s3://packages.emqx.io/emqx/$version
+        aws2 s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$version
         aws2 s3 cp --recursive ./_packages/emqx-edge s3://packages.emqx.io/emqx-edge/$version
   docker:
     runs-on: ubuntu-latest
@@ -168,5 +170,5 @@ jobs:
     - name: upload to aws s3
       run: |
         version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g")
-        aws2 s3 cp --recursive ./_packages/emqx s3://packages.emqx.io/emqx/$version
+        aws2 s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$version
         aws2 s3 cp --recursive ./_packages/emqx-edge s3://packages.emqx.io/emqx-edge/$version
