--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -105,7 +105,7 @@ jobs:
         if [ ${{ matrix.os }} == 'raspbian8' ]; then sudo docker pull emqx/build-env@sha256:ed02c6eb379d963c9b696f5703d6e0fc3ad0c5ab1f872e5702246bad9167f824; sudo docker tag emqx/build-env@sha256:ed02c6eb379d963c9b696f5703d6e0fc3ad0c5ab1f872e5702246bad9167f824 emqx/build-env:raspbian8; fi
         if [ ${{ matrix.os }} == 'raspbian9' ]; then sudo docker pull emqx/build-env@sha256:f8200d7b98f6af457300e7edc74537b529cc81b77c37d1c37434fe5822b23263; sudo docker tag emqx/build-env@sha256:f8200d7b98f6af457300e7edc74537b529cc81b77c37d1c37434fe5822b23263 emqx/build-env:raspbian9; fi
         if [ ${{ matrix.os }} == 'raspbian10' ];then sudo docker pull emqx/build-env@sha256:af59d0ae396d22536d84cab763b828318ef721f6f1cd693ecf0a9df8046e9f19; sudo docker tag emqx/build-env@sha256:af59d0ae396d22536d84cab763b828318ef721f6f1cd693ecf0a9df8046e9f19 emqx/build-env:raspbian10; fi
-        sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        sudo docker run --rm --privileged multiarch/qemu-user-static:register --reset
         sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=develop -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
     - name: set aws
       run: |
